# Thesis-Trustworthy-RAG

./: .gitignore  README.md  batch_scraper.py  config.yaml  course_pipeline.py  experiment_results.csv  html_scraper.py  main.py  metadata_corrections_backup.json  metadata_handler.py  pdf_processor.py  pyproject.toml  requirements.txt  scrape_and_extract.py  scraper.ipynb  utils.py
output/: experiment_results.csv
output/usability_test_run/: P1_experiment.csv  P2_experiment.csv  P3_experiment.csv  P4_experiment.csv  P5_experiment.csv  experiment_results.csv
processed_syllabi/: metadata_corrections_backup.json
processed_syllabi/Adv_cog_neuroscience/: processed_chunks.json
processed_syllabi/Adv_cognitive_modelling/: processed_chunks.json
processed_syllabi/Data_science/: processed_chunks.json
processed_syllabi/Decision_making/: processed_chunks.json
processed_syllabi/Human_computer_interaction/: processed_chunks.json
processed_syllabi/Natural_language_processing/: processed_chunks.json
src/: README.md  bm25_retriever.py  config.yaml  core.py  course_pipeline.py  csv_logger.py  embeddings_pipeline.py  generate.py  generate_ragas_dataset.py  main.py  rag_pipeline.py  ragas_eval.py  ragas_test.ipynb  redo_lex_score.py  retriever.py  run_cli.py  split_documents.py  streamlit_app.py  test_chatui.py  test_ragas_cost.py  test_uncertainty_ecc.py  test_uncertainty_lexsim.py  uncertainty_estimator.py  uncertainty_estimator_factory.py  utils.py
src/app/: streamlit_app.py  ui_helpers,py  ui_helpers.py
src/archive/: add_course_metadata.py  deberta_test.py  test_db.py  (+10 more)
(+252 files in other folders)
