[project]
name = "thesis-trustworthy-rag"
version = "0.1.0"
description = "thesis project"
readme = "README.md"
authors = [
    { name = "SarahHvidAndersen", email = "sarah@hvid.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bm25s>=0.2.12",
    "chromadb>=1.0.9",
    "dotenv>=0.9.9",
    "joblib>=1.5.0",
    "jq>=1.8.0",
    "langchain>=0.3.25",
    "lxml-html-clean>=0.4.2",
    "matplotlib>=3.10.3",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "pymupdf>=1.25.5",
    "pypdf>=5.5.0",
    "pystemmer>=3.0.0",
    "ragas>=0.2.15",
    "requests>=2.32.3",
    "rouge-score>=0.1.2",
    "selenium>=4.32.0",
    "sentence-transformers>=4.1.0",
    "stemmer>=0.0.4",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]

[project.scripts]
thesis-trustworthy-rag = "thesis_trustworthy_rag:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}            # ← src‑layout
packages = ["internal"]
